# owoify_ml

./: .gitignore  dune-project  owoify_ml.opam
lib/: dune  interleave_lists.ml  interleave_lists.mli  owoify.ml  word.ml  word.mli
lib/shared/: dune  string_set.ml
lib/utility/: dune  interleave_lists.ml  mappings.ml  presets.ml
lib/word/: dune  word.ml  word.mli
test/: dune
