(lang dune 3.1)

(name owoify_ml)

(generate_opam_files true)

(source
 (github deadshot465/owoify_ml))

(authors "Tetsuki Syu")

(maintainers "Tetsuki Syu")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name owoify_ml)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
